# llm_chess

./: .gitignore  README.md  environment.yml  pyproject.toml
llm_chess/data/: dataset_info.json  generate_gym_evals copy.ipynb  sft_datagen_datamix_2.py  verl_datagen_datamix_1.py  verl_datagen_datamix_2.py  view_data.ipynb
llm_chess/data/cleaned/evals/: bestmove_eval_100.jsonl  bestmove_eval_400.jsonl  legalmoves_eval_100.jsonl  legalmoves_eval_400.jsonl  predictmove_eval_100.jsonl  predictmove_eval_400.jsonl  worstmove_eval_100.jsonl  worstmove_eval_400.jsonl
llm_chess/data/programmatic_explanations/: chess_explainer.py  explainer_testbook.ipynb  generate_reasoning.py  phrase_banks.py  prompt.py  variation_node.py
llm_chess/data/raw/: board.py  generate_evals.ipynb  generate_singlemoves.ipynb  process_deepmind_data.ipynb  process_magpie.ipynb  process_rejsampling.ipynb  view_evals.ipynb
llm_chess/prompts/: chat_to_prompt.py
llm_chess/prompts/samples/: blunder_syntheticgenerator_sysprompt.txt  goodmove_syntheticgenerator_sysprompt.txt  hallucinations_sysprompt.txt  reasoning_strategies_sysprompt.txt  syntheticmove_generation_sysprompt.txt
llm_chess/tasks/: inference.py
llm_chess/tasks/training_configs/: llamafactory_sft_programmatic_qwen25_dm2.yaml
llm_chess/utils/: __init__.py  evaluator.py  exceptions.py  llm_parser.py  parsing.py  results_dict.py  vllm_api.py
runscripts/verl-multi/: verlmulti_q25_7b_mmxl_exp_1.yml
runscripts/verl_sh/: verl-llama8b-grpo-normcut-4k-cliphigher_v1.sh  verl-qwen25-7b-grpo-datamix-1.sh
(+13 files in other folders)
