[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llamafactory"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
llamafactory-cli = "llamafactory.cli:main"

[tool.setuptools.packages.find]
where = []
include = []
exclude = ["*"]

[tool.ruff]
target-version = "py39"
line-length = 119
indent-width = 4

[tool.ruff.lint]
ignore = [
    "C408",
    "C901",
    "E501",
    "E731",
    "E741",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
]
extend-select = [
    "C",
    "E",
    "F",
    "I",
    "W",
    "UP",
    "D",
    "PT009",
    "RUF022",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["llamafactory"]
known-third-party = [
    "accelerate",
    "datasets",
    "gradio",
    "numpy",
    "peft",
    "torch",
    "transformers",
    "trl",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"